@@ -1,3 +1,0 @@
-key = QqSezYvBtk2gzrdpggMHvt5fJGWCdkRw
-keystore.type = JCEKS
-enable.watcher = true
